upgrades to raster stops, cartocss version change and fix some spacing on backend

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -1108,9 +1108,14 @@ form {
       color: #333;
       font-size: .6em;
       padding: .5rem .8rem;
+      &:hover {
+        border: 1px solid #e7e7e7;
+        box-shadow: 0 0 3px rgba(0,0,0,0.15);
+      }
     }
     .raster-stop {
-      
+      display: block;
+      margin-bottom: .5rem;
     }
   }
 }
